Fixed scalar training in cross validation

--- a/model training/train_XGBoost.ipynb
+++ b/model training/train_XGBoost.ipynb
@@ -19,6 +19,7 @@
     "import numpy as np\n",
     "from sklearn.model_selection import TimeSeriesSplit, GridSearchCV\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.base import clone\n",
     "import xgboost as xgb\n",
@@ -39,18 +40,7 @@
    "execution_count": 2,
    "id": "3d614a99",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['scaler.pkl']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load data\n",
     "df = pd.read_csv('features.csv')\n",
@@ -67,13 +57,7 @@
     "# Train test split\n",
     "split_idx = int(len(df) * 0.8)\n",
     "X_train, X_test = X.iloc[:split_idx], X.iloc[split_idx:]\n",
-    "y_train, y_test = y_binary[:split_idx], y_binary[split_idx:]\n",
-    "\n",
-    "# Scale features \n",
-    "scaler = StandardScaler()\n",
-    "X_train = pd.DataFrame(scaler.fit_transform(X_train), columns=X_train.columns)\n",
-    "X_test = pd.DataFrame(scaler.transform(X_test), columns=X_test.columns)\n",
-    "joblib.dump(scaler, 'scaler.pkl')"
+    "y_train, y_test = y_binary[:split_idx], y_binary[split_idx:]"
    ]
   },
   {
@@ -96,38 +80,32 @@
      "text": [
       "Fitting 3 folds for each of 128 candidates, totalling 384 fits\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['xgboost_model.pkl']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "base_model = xgb.XGBClassifier(random_state=11)\n",
+    "pipe = Pipeline([\n",
+    "    ('scale', StandardScaler()),\n",
+    "    ('clf', xgb.XGBClassifier(random_state=11))])\n",
+    "\n",
     "\n",
     "param_grid = {\n",
-    "    'n_estimators': [100, 300],\n",
-    "    'max_depth': [3, 9],\n",
-    "    'learning_rate': [0.05, 0.2],\n",
-    "    'subsample': [0.7, 1.0],\n",
-    "    'colsample_bytree': [0.7, 1.0],\n",
-    "    'reg_alpha': [0, 0.2],\n",
-    "    'reg_lambda': [0, 0.2]\n",
+    "    'clf__n_estimators': [100, 300],\n",
+    "    'clf__max_depth': [3, 9],\n",
+    "    'clf__learning_rate': [0.05, 0.2],\n",
+    "    'clf__subsample': [0.7, 1.0],\n",
+    "    'clf__colsample_bytree': [0.7, 1.0],\n",
+    "    'clf__reg_alpha': [0, 0.2],\n",
+    "    'clf__reg_lambda': [0, 0.2]\n",
     "}\n",
     "\n",
     "ts_split = TimeSeriesSplit(n_splits=3)\n",
-    "grid_search = GridSearchCV(estimator=base_model, param_grid=param_grid, cv=ts_split, \n",
-    "                           scoring='accuracy', n_jobs=-1, verbose=3)\n",
-    "grid_search.fit(X_train, y_train)\n",
+    "grid_search = GridSearchCV(pipe, param_grid=param_grid, scoring='accuracy',\n",
+    "    cv=ts_split, verbose=3, n_jobs=-1, refit=True)\n",
     "\n",
+    "grid_search.fit(X_train, y_train)\n",
     "best_model = grid_search.best_estimator_\n",
-    "joblib.dump(best_model, 'xgboost_model.pkl')"
+    "best_params = grid_search.best_params_\n",
+    "best_clf_params = {k.replace('clf__', ''): v for k, v in best_params.items()}"
    ]
   },
   {
@@ -176,6 +154,41 @@
     "results.append(f\"Test: {test_acc:.4f}\")\n",
     "\n",
     "print(\"\\nResults:\\n\" + \"\\n\".join(results))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df5b454f",
+   "metadata": {},
+   "source": [
+    "#### Train final model with all data for production"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6451bed4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['xgboost_model.pkl']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)           \n",
+    "final_model = xgb.XGBClassifier(random_state=11, **best_clf_params)\n",
+    "final_model.fit(X_scaled, y_binary)\n",
+    "\n",
+    "joblib.dump(scaler, 'scaler.pkl')\n",
+    "joblib.dump(final_model, 'xgboost_model.pkl')"
    ]
   }
  ],
